--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #0f52ba;
+    background-color: #0f52ba; /* sapphire blue */
 }
 
 header {
@@ -26,9 +26,9 @@ header {
     left: 50%;
     margin-left: -50vw;
     margin-top: -10vh;
-    color: #0033FF;
+    color: blue;
     font-size: 15vh;
-    text-shadow: 5px 2px 0px #FFFFFF;
+    text-shadow: 5px 2px 0px white;
 }
 
 nav {
@@ -45,6 +45,8 @@ nav {
     width: 80%;
     margin: auto;
     background: black;
+    border: 4px solid red;
+    border-radius: 5px;
 }
 
 #paytable {
@@ -64,6 +66,7 @@ nav {
     grid-row-start: 2;
     grid-row-end: 2;
     border: .5px solid #CCCC00; /* dark yellow1 */
+    border-radius: 2px;
     background-color: blue;
 }
 
@@ -83,6 +86,54 @@ nav {
     color: red;
 }
 
-#play-buttons {
+#card-holds {
+    margin: auto;
+    display: grid;
+}
+
+.card-held {
+    grid-row-start: 1;
+    grid-row-end: 1;
+    color: white;
     text-align: center;
+}
+
+.card-container {
+    display: grid;
+    justify-content: center;
+}
+
+.cards {
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-content: center;
+}
+
+.card {
+     justify-content: center;
+}
+
+#play-buttons {
+    width: 100%;
+    display: inline-grid;
+    justify-content: center;
+}
+
+.play-grid-item {
+    justify-content: center;
+    margin: 10%;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+
+.play-grid-item1 {
+    display: inline-grid;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    justify-content: center;
+}
+
+#bet-text {
+    text-align: center;
+    color: white;
 }
